force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Birthday__c.field-meta.xml
<CustomField>
    <fullName>Sym_Birthday__c</fullName>
    <description>Holds the census member&#39;s birthday</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthday</label>
    <type>Date</type>
</CustomField>