force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Birthday_Text__c.field-meta.xml
<CustomField>
    <fullName>Sym_Birthday_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Birthday Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>