force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Census__c.field-meta.xml
<CustomField>
    <fullName>Sym_Census__c</fullName>
    <description>Used to connect the census member data to the census in the reimagine POC</description>
    <label>Census</label>
    <referenceTo>Sym_Census__c</referenceTo>
    <relationshipLabel>Group Rosters</relationshipLabel>
    <relationshipName>Census_Members</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>