force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Contract_Type__c.field-meta.xml
<CustomField>
    <fullName>Sym_Contract_Type__c</fullName>
    <description>Used to house the census member&#39;s contract type.</description>
    <label>Contract Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>9</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>