force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>Sym_Eligibility__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Eligibility</label>
    <length>10</length>
    <type>Text</type>
</CustomField>