force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Sym_Last_Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Name</label>
    <length>25</length>
    <type>Text</type>
</CustomField>