force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Status__c.field-meta.xml
<CustomField>
    <fullName>Sym_Status__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Status</label>
    <length>20</length>
    <type>Text</type>
</CustomField>