force-app/main/default/objects/Sym_Census_Member__c/fields/Sym_Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Sym_Zip_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Zip Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>